# ail

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
benchmarks/: README.md  m7-freeze.json  m7-parity-report.json
benchmarks/baselines/python/: README.md  checkpoints.json  performance_adapter.py  pyproject.toml  runner.json  seed-locations.json  verification-manifest.json  verification-manifest.lock.json
benchmarks/baselines/python/tests/: __init__.py  conftest.py  test_contract.py  test_fixture.py  test_runner.py  test_service.py  test_store.py  test_v1.py
benchmarks/baselines/python/v1/: __init__.py  job_service.py
benchmarks/baselines/python/v2/: __init__.py  domain.py  fixture.py  runner.py  service.py  store.py
benchmarks/baselines/rust/: Cargo.toml  README.md  checkpoints.json  runner.json  rust-toolchain.toml  seed-locations.json  verification-manifest.json  verification-manifest.lock.json
benchmarks/baselines/rust/v1/: Cargo.toml
benchmarks/baselines/rust/v1/src/: lib.rs
benchmarks/baselines/rust/v2/: Cargo.toml
benchmarks/baselines/rust/v2/examples/: performance_adapter.rs
benchmarks/baselines/rust/v2/src/: codec.rs  domain.rs  lib.rs  main.rs  service.rs  store.rs
benchmarks/baselines/rust/v2/tests/: checkpoints.rs  runner_cli.rs
benchmarks/task-starts/overlays/rust/uc003/v2/: Cargo.toml
benchmarks/task-starts/overlays/rust/uc003/v2/tests/: task_checks.rs
compiler/: README.md
docs/: README.md  STATUS.md  application-vision.md  architecture-acceptance.md  architecture-health.md  design-direction.md  m8-execution-plan.md  project-intent.md  roadmap.md  spec-review.md  stack-evaluation.md
prototypes/: README.md
specs/: README.md  architecture-acceptance-reviews.json  architecture-acceptance.json  architecture-contract.json  architecture-protocol.json  architecture.md  core-contract.json  core.md  evolution-contract.json  evolution-protocol.json  evolution.md  protocol.json  (+4 more)
(+231 files in other folders)
