[workspace]
members = ["v1", "v2"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
