[package]
name = "ail-job-service-v2"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "ail-job-service-v2"
path = "src/main.rs"

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
